package br.com.ajf.learnjavadesignpatterns.bridge;

public interface IDraw
{
	void drawCircle(float radium,float x,float y);
}
